Update tts-dev-helper version

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-COMPILE_DEST=~/.local/share/Tabletop\ Simulator/Saves/Casino/Casino.json
-EXTRACT_SOURCE=~/.local/share/Tabletop\ Simulator/Saves/Casino/Casino.json
+COMPILE_DEST=/home/user/.local/share/Tabletop Simulator/Saves/Casino/Casino.json
+EXTRACT_SOURCE=/home/user/.local/share/Tabletop Simulator/Saves/Casino/Casino.json
